--- a/app/Resources/views/baseLogin.html.twig
+++ b/app/Resources/views/baseLogin.html.twig
@@ -12,6 +12,8 @@
     <link href="{{ asset ('ample/css/style.css')}}" rel="stylesheet">
     <!-- color CSS -->
     <link href="{{ asset ('ample/css/colors/blue.css')}}" id="theme"  rel="stylesheet">
+    <link rel="stylesheet" href="{{ asset ('css/styles.css')}}">
+    
 </head>
 <body>
     {% block body %}{% endblock %}
