--- a/src/AppBundle/Resources/views/Users/register.html.twig
+++ b/src/AppBundle/Resources/views/Users/register.html.twig
@@ -16,6 +16,7 @@
 				{{form_start(form)}}
 				{{form_row(form.username)}}
 				{{form_row(form.name)}}
+				{{form_row(form.grupo)}}
 				{{form_row(form.phone)}}
 				{{form_row(form.plainPassword)}}
 				<br>
