--- a/src/AppBundle/Resources/views/Security/login.html.twig
+++ b/src/AppBundle/Resources/views/Security/login.html.twig
@@ -3,8 +3,26 @@
 <section id="wrapper" class="login-register">
 	<div class="login-box login-sidebar">
 		<div class="white-box">
+			<img src="{{ asset ('ample/images/admin-logo-dark.png')}}" alt="Home" /><br/><img src="{{ asset ('ample/images/admin-text-dark.png')}}" alt="Home" />
+			{% for flash_message in app.session.flashbag.get('notice') %}
+			<div class="alert alert-success text-center noPadding" role="alert">
+				<h6 class=" text-white font-bold">{{ flash_message }}</h6>
+			</div>
+			{% endfor %}
+			{% for flash_message in app.session.flashbag.get('error') %}
+			<div class="alert alert-danger text-center noPadding" role="alert">
+				<h6 class=" text-white font-bold">{{ flash_message }}</h6>
+			</div>
+			{% endfor %}
+			{% if error %}
+			<div class="alert alert-danger text-center noPadding" role="alert">
+				<h6 class="text-white font-bold">
+					{{ error.messageKey|trans(error.messageData, 'security')|replace({"Invalid credentials." : "Email o contraseña invalidas"}) }}
+				</h6>
+			</div>
+			{% endif %}
 			<form method="POST" action="{{ path ('login')}}" class="form-horizontal form-material" id="loginform" action="index.html">
-				<a href="javascript:void(0)" class="text-center db"><img src="{{ asset ('ample/images/admin-logo-dark.png')}}" alt="Home" /><br/><img src="{{ asset ('ample/images/admin-text-dark.png')}}" alt="Home" /></a>  
+				
 
 				<div class="form-group m-t-40">
 					<div class="col-xs-12">
@@ -40,13 +58,7 @@
 						</div>
 					</div>
 				</form>
-				{% if error %}
-				<div class="text-center">
-					<h3 class="text-danger">
-						{{ error.messageKey|trans(error.messageData, 'security')|replace({"Invalid credentials." : "Email o contraseña invalidas"}) }}
-					</h3>
-				</div>
-				{% endif %}
+				
 				<form class="form-horizontal" id="recoverform" action="index.html">
 					<div class="form-group ">
 						<div class="col-xs-12">
