--- a/src/AppBundle/Resources/views/PDF/factura.html.twig
+++ b/src/AppBundle/Resources/views/PDF/factura.html.twig
@@ -1,80 +1,115 @@
 <style>
-table , th  ,td{
-  border:1px solid black;
-}
-table{
-  margin-top: 50px;
-  border-collapse: collapse;
-}
-.header{
-  text-align: center;
-}
-th{
-  text-align: center;
-  background: #D7D5D5;
-}
-td{
-  text-align: center;
-  white-space:pre ;
-}
-.tabla{
-  width: 10000px;
-}
+  table,
+  th,
+  table.border td {
+    border: 1px solid black;
+  }
+
+  table {
+    margin-top: 20px;
+    border-collapse: collapse;
+  }
+
+  .header {
+    text-align: center;
+  }
+
+  th {
+    text-align: center;
+    background: #D7D5D5;
+  }
+
+  td {
+    text-align: center;
+    white-space: pre;
+  }
+
+  .tabla {
+    width: 10000px;
+  }
 </style>
 <page>
 
   <h5 class="header">{{factura.grupo.nombre}} {{factura.fecha|date('d-m-Y')}}</h5>
   <br>
-  {#
-  <table >
-    <tr >
-      <th>Id</th>
-      <th style="width:20px">Nombre de lista</th>
-      <th style="width:100px">Tipo de lista</th>
-      <th style="width:100px">Fecha del evento</th>
-      <th style="width:100px">Cantidad de invitados</th>
-      <th style="width:100px">Pais</th>
-      <th style="width:100px">Ciudad</th>
-      <th style="width:100px">Pais retiro de fondos</th>
-      <th style="width:100px">Moneda elegida</th>
-    </tr>
-    {% for lista in listas %}
-    <tr>
-      <td>{{ lista.id}}</td>
-      <td>{{ lista.titulo}}</td>
-      <td>{{ lista.tipo.tipo}}</td>
-      <td>{{ lista.fecha|date('d-m-Y')}}</td>
-      <td>{{ lista.invitados}}</td>
-      <td>{{ lista.pais.pais}}</td>
-      <td>{{ lista.ciudad}}</td>
-      <td>{{ lista.comision.pais.pais}}</td>
-      <td>{{ lista.comision.pais.codigo}}</td>
-    </tr>
-    {% endfor %}
-  </table>
-    #}
   {% for datos in data %}
-  <table >
-    <tr>
-      <td>Tratamiento</td>
-      <td>{{datos.persona.tratamiento}}</td>
-      <td>Nombre</td>
-      <td>{{datos.persona.nombre}}</td>
+  <table class="border" style="margin-left:50px">
+      <tr>
+        <th colspan="4">Datos personales</th>
+      </tr>
+      <tr>
+        <th style="width:160px">Tratamiento</th>
+        <th style="width:160px">Nombre</th>
+        <th style="width:160px">Llegada</th>
+        <th style="width:160px">Salida</th>
+      </tr>
+      <tr>
+        <td>{{datos.persona.tratamiento}}</td>
+        <td>{{datos.persona.nombre}}</td>
+        <td>{{datos.reservacion.fechaInicio|date('d-m-Y')}}</td>
+        <td>{{datos.reservacion.fechaFin|date('d-m-Y')}}</td>
     </tr>
-    <tr>
-      <td >Fecha de llegada</td>
-      <td >{{datos.reservacion.fechaInicio|date('d-m-Y')}}</td>
-      <td >Fecha de salida </td>
-      <td >{{datos.reservacion.fechaFin|date('d-m-Y')}}</td>
-    </tr>
-    <tr>
-      <td >Cama</td>
-      <td >{{datos.reservacion.cama.numero}}</td>
-      <td >Cuarto</td>
-      <td >{{datos.reservacion.cama.cuarto.numero}}</td>
-    </tr>
+      <tr>
+        <th colspan="4">Servicios</th>
+      </tr>
+      <tr>
+        <th>Servicio</th>
+        <th>Tipo</th>
+        <th>Fecha</th>
+        <th>Costo</th>
+      </tr>
+      {% set totalServicio = 0 %}
+      {% for servicios in datos.servicios %}
+      <tr>
+        <td>{{servicios.servicio.servicio}}</td>
+        <td>{{servicios.servicio.tipo}}</td>
+        <td>23/05/2020</td>
+        <td>{{servicios.servicio.costo}} $</td>
+      </tr>
+      {% set totalServicio = totalServicio + servicios.servicio.costo %}
+      {% endfor %}
+      <tr>
+        <td></td>
+        <td></td>
+        <td>Total</td>
+        <td>{{totalServicio}} $</td>
+      </tr>
   </table>
   {% endfor %}
-  <page_footer> 
-  </page_footer> 
+  <table style="margin-left:50px; border:none">
+    <tr>
+      <td></td>
+      <td></td>
+      <td>Descuento</td>
+      <td>{{factura.descuento}} %</td>
+    </tr>
+    <tr>
+      <td></td>
+      <td></td>
+      <td>Subtotal</td>
+      <td>{{factura.subtotal}} $</td>
+    </tr>
+    <tr>
+      <td></td>
+      <td></td>
+      <td>Tipo de pago</td>
+      <td>{{factura.tipoPago}}</td>
+    </tr>
+    {% if factura.caja %}
+    <tr>
+      <td></td>
+      <td></td>
+      <td>Caja</td>
+      <td>{{factura.caja.nro}}</td>
+    </tr>
+    {% endif %}
+    <tr>
+      <td style="width:160px"></td>
+      <td style="width:160px"></td>
+      <td style="width:160px">Total</td>
+      <td style="width:160px">{{factura.total}} $</td>
+    </tr>
+  </table>
+  <page_footer>
+  </page_footer>
 </page>
