--- a/src/AppBundle/Resources/views/Security/login.html.twig
+++ b/src/AppBundle/Resources/views/Security/login.html.twig
@@ -1,83 +1,66 @@
 {% extends 'baseLogin.html.twig' %}
 {% block body %}
-<section id="wrapper" class="login-register">
-	<div class="login-box login-sidebar">
-		<div class="white-box">
-			<img src="{{ asset ('ample/images/admin-logo-dark.png')}}" alt="Home" /><br/><img src="{{ asset ('ample/images/admin-text-dark.png')}}" alt="Home" />
-			{% for flash_message in app.session.flashbag.get('notice') %}
-			<div class="alert alert-success text-center noPadding" role="alert">
-				<h6 class=" text-white font-bold">{{ flash_message }}</h6>
-			</div>
-			{% endfor %}
-			{% for flash_message in app.session.flashbag.get('error') %}
-			<div class="alert alert-danger text-center noPadding" role="alert">
-				<h6 class=" text-white font-bold">{{ flash_message }}</h6>
-			</div>
-			{% endfor %}
-			{% if error %}
-			<div class="alert alert-danger text-center noPadding" role="alert">
-				<h6 class="text-white font-bold">
-					{{ error.messageKey|trans(error.messageData, 'security')|replace({"Invalid credentials." : "Email o contraseña invalidas"}) }}
-				</h6>
-			</div>
-			{% endif %}
-			<form method="POST" action="{{ path ('login')}}" class="form-horizontal form-material" id="loginform" action="index.html">
-				
-
-				<div class="form-group m-t-40">
-					<div class="col-xs-12">
-						<input class="form-control" type="text" name="_username" required="" placeholder="Username">
-					</div>
-				</div>
-				<div class="form-group">
-					<div class="col-xs-12">
-						<input class="form-control" type="password" name="_password" required="" placeholder="Password">
-					</div>
-				</div>
-				<div class="form-group">
-					<div class="col-md-12">
-						<div class="checkbox checkbox-primary pull-left p-t-0">
-							<input id="checkbox-signup" type="checkbox">
-							<label for="checkbox-signup"> Remember me </label>
-						</div>
-						<a href="javascript:void(0)" id="to-recover" class="text-dark pull-right"><i class="fa fa-lock m-r-5"></i> Forgot pwd?</a> </div>
-					</div>
-					<div class="form-group text-center m-t-20">
-						<div class="col-xs-12">
-							<button class="btn btn-info btn-lg btn-block text-uppercase waves-effect waves-light" type="submit">Log In</button>
-						</div>
-					</div>
-					<div class="row">
-						<div class="col-xs-12 col-sm-12 col-md-12 m-t-10 text-center">
-							<div class="social"><a href="javascript:void(0)" class="btn  btn-facebook" data-toggle="tooltip"  title="Login with Facebook"> <i aria-hidden="true" class="fa fa-facebook"></i> </a> <a href="javascript:void(0)" class="btn btn-googleplus" data-toggle="tooltip"  title="Login with Google"> <i aria-hidden="true" class="fa fa-google-plus"></i> </a> </div>
-						</div>
-					</div>
-					<div class="form-group m-b-0">
-						<div class="col-sm-12 text-center">
-							<p>Don't have an account? <a href="{{ path ('users_register')}}" class="text-primary m-l-5"><b>Sign Up</b></a></p>
-						</div>
-					</div>
-				</form>
-				
-				<form class="form-horizontal" id="recoverform" action="index.html">
-					<div class="form-group ">
-						<div class="col-xs-12">
-							<h3>Recover Password</h3>
-							<p class="text-muted">Enter your Email and instructions will be sent to you! </p>
-						</div>
-					</div>
-					<div class="form-group ">
-						<div class="col-xs-12">
-							<input class="form-control" type="text" required="" placeholder="Email">
-						</div>
-					</div>
-					<div class="form-group text-center m-t-20">
-						<div class="col-xs-12">
-							<button class="btn btn-primary btn-lg btn-block text-uppercase waves-effect waves-light" type="submit">Reset</button>
-						</div>
-					</div>
-				</form>
-			</div>
+{% if error %}
+<div class="alert alert-danger text-center noPadding" role="alert">
+    <h6 class="text-white font-bold">
+        {{ error.messageKey|trans(error.messageData, 'security')|replace({"Invalid credentials." : "Email o contraseña invalidas"}) }}
+    </h6>
+</div>
+{% endif %}
+<h3 class="text-center">Hospedaje San Pedro</h3>
+<form method="POST" action="{{ path ('login')}}" class="form-horizontal form-material" id="loginform"
+	action="index.html">
+	<div class="form-group m-t-40">
+		<div class="col-xs-12">
+			<input class="form-control" type="text" name="_username" required="" placeholder="Username">
 		</div>
-	</section>
-	{% endblock %}
+	</div>
+	<div class="form-group">
+		<div class="col-xs-12">
+			<input class="form-control" type="password" name="_password" required="" placeholder="Password">
+		</div>
+	</div>
+	<div class="form-group">
+		<div class="col-md-12">
+			<div class="checkbox checkbox-primary pull-left p-t-0">
+			</div>
+			<a href="javascript:void(0)" id="to-recover" class="text-dark pull-right"><i class="fa fa-lock m-r-5"></i> Olvide 
+				mi contraseña</a>
+		</div>
+	</div>
+	<div class="form-group text-center m-t-20">
+		<div class="col-xs-12">
+			<button class="btn btn-success btn-lg btn-block text-uppercase waves-effect waves-light" type="submit">Ingresar</button>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-xs-12 col-sm-12 col-md-12 m-t-10 text-center">
+		</div>
+	</div>
+	<div class="form-group m-b-0">
+		<div class="col-sm-12 text-center">
+			<p>No tienes cuenta? <a href="{{ path ('users_register')}}" class="text-primary m-l-5"><b>Registrarse</b></a></p>
+		</div>
+	</div>
+</form>
+
+<form class="form-horizontal" id="recoverform" action="index.html">
+	<div class="form-group ">
+		<div class="col-xs-12">
+			<h3>Recover Password</h3>
+			<p class="text-muted">Enter your Email and instructions will be sent to you! </p>
+		</div>
+	</div>
+	<div class="form-group ">
+		<div class="col-xs-12">
+			<input class="form-control" type="text" required="" placeholder="Email">
+		</div>
+	</div>
+	<div class="form-group text-center m-t-20">
+		<div class="col-xs-12">
+			<button class="btn btn-primary btn-lg btn-block text-uppercase waves-effect waves-light"
+				type="submit">Reset</button>
+		</div>
+	</div>
+</form>
+{% endblock %}
