--- a/src/AppBundle/Resources/views/Users/register.html.twig
+++ b/src/AppBundle/Resources/views/Users/register.html.twig
@@ -1,31 +1,18 @@
 {% extends 'baseLogin.html.twig' %}
 
 {% block body %}
-<section id="wrapper" class="new-login-register">
-	<div class="lg-info-panel">
-		<div class="inner-panel">
-			<a href="javascript:void(0)" class="p-20 di"><img src="../plugins/images/admin-logo.png"></a>
-			<div class="lg-content">
-				<h2>THE ULTIMATE & MULTIPURPOSE ADMIN TEMPLATE OF 2017</h2>
-				<p class="text-muted">with this admin you can get 2000+ pages, 500+ ui component, 2000+ icons, different demos and many more... </p> <a href="#" class="btn btn-rounded btn-danger p-l-20 p-r-20"> Buy now</a> </div>
-			</div>
-		</div>
-		<div class="new-login-box">
-			<div class="white-box">
-				<h3 class="box-title m-b-0">Sign UP to Admin</h3> <small>Enter your details below</small>
-				{{form_start(form)}}
-				{{form_row(form.username)}}
-				{{form_row(form.name)}}
-				{{form_row(form.grupo)}}
-				{{form_row(form.phone)}}
-				{{form_row(form.plainPassword)}}
-				<br>
-				<div class="text-center">
-					<button class="btn btn-primary">Registrar</button>
-					<a href="{{ path ('login')}}" class="text-primary m-l-5">ya tengo cuenta</a>
-				</div>
-				{{form_end(form)}}
-			</div>
-		</div>
-	</section>
+<h3 class="box-title m-b-0">Registrar usuario</h3> <small>Ingrese sus datos</small>
+<br><br>
+	{{form_start(form)}}
+	{{form_row(form.username)}}
+	{{form_row(form.name)}}
+	{{form_row(form.grupo)}}
+	{{form_row(form.phone)}}
+	{{form_row(form.plainPassword)}}
+	<br>
+	<div class="text-center">
+		<button class="btn btn-primary">Registrar</button>
+		<a href="{{ path ('login')}}" class="text-primary m-l-5">ya tengo cuenta</a>
+	</div>
+	{{form_end(form)}}
 	{% endblock %}
